--- a/src/pages/obd2-gauge.html
+++ b/src/pages/obd2-gauge.html
@@ -28,7 +28,7 @@
                 <label for="T6">Ford T6</label><br>
             </form>
             <hr>
-            <esp-web-install-button manifest="obd2_manifest.json" id="init-button">
+            <esp-web-install-button manifest="https://github.com/VaAndCob/ESP32-OBD2-Gauge/blob/main/sketch/firmware/T5_manifest.json" id="init-button">
                 <button slot="activate" style="margin-top: 30px;background-color: green">
                     Connect</button><br>
                 <span slot="unsupported">Your browser doesn't support!</span><br>
