--- a/src/pages/pixly.html
+++ b/src/pages/pixly.html
@@ -15,7 +15,7 @@
 <body>
     <div>
         1. Google Chrome only<br>
-        2. Plug USB to the CYD<br>
+        2. Plug USB to the ESP32 2.4" TFT<br>
         3. Click Flash to install firmware<br>
     </div><br>
     <div id="main">
