--- a/src/pages/obd2-gauge.html
+++ b/src/pages/obd2-gauge.html
@@ -15,7 +15,7 @@
 <body>
     <div>
         1. Connect OBD2 to the vehicle<br>
-        2. Click Connect to read data<br>
+        2. Plug USB to the ESP32 2.8" TFT<br>
         3. Use the gauge to monitor performance<br>
     </div><br>
     <div id="main">
