--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="tab-container">
         <div class="tabs">
             <button class="tab-button active" data-tab="obd2">Va&Cob OBD2 Gauge</button>
-            <button class="tab-button" data-tab="pixly">Pixly</button>
+            <button class="tab-button" data-tab="printpoop">PrintpooP</button>
             <button class="tab-button" data-tab="other">Other Device</button>
         </div>
         
