--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="tabs">
             <button class="tab-button active" data-tab="obd2">Va&Cob OBD2 Gauge</button>
             <button class="tab-button" data-tab="printpoop">PrintpooP</button>
-            <button class="tab-button" data-tab="other">Other Device</button>
+            <button class="tab-button" data-tab="other">Other project</button>
         </div>
         
 <div class="tab-content">
