--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -15,18 +15,21 @@
 <body>
     <div>
         1. Google Chrome only<br>
-        2. Plug USB to the ESP32 2.4" TFT<br>
-        3. Click Flash to install firmware<br>
+        2. Plug USB to the ESP32 2.4" or 2.8" TFT<br>
+        3. Select the model
+        4. Click Flash to install firmware<br>
     </div><br>
     <div id="main">
         <fieldset>
             <legend>Select firmware</legend>
             <form id="select-firmware">
-                <input type="radio" id="device1" name="device" value="printpoop" style="margin: 20px" onclick="setManifest('printpoop')" checked />
-                <label for="device1">PrintpooP</label><br>
+                <input type="radio" id="device1" name="device" value="printpoop24" style="margin: 20px" onclick="setManifest('printpoop24')" checked />
+                <label for="device1">PrintpooP 2.4"</label><br>
+                <input type="radio" id="device1" name="device" value="printpoop28" style="margin: 20px" onclick="setManifest('printpoop28')" checked />
+                <label for="device1">PrintpooP 2.8"</label><br>
             </form>
             <hr>
-            <esp-web-install-button manifest="../../firmware/printpoop/printpoop_manifest.json" id="init-button">
+            <esp-web-install-button manifest="../../firmware/printpoop/printpoop24_manifest.json" id="init-button">
                 <button slot="activate" style="margin-top: 30px;background-color: green">Flash</button><br>
                 <span slot="unsupported">Your browser doesn't support!</span><br>
                 <span slot="not-allowed">Not support HTTP!</span>
@@ -54,7 +57,7 @@
         }
 
         window.onload = function () {
-            terminalOut('Select firmware -> Pixly');
+            terminalOut('Select firmware -> PrintpooP CYD 2.4"');
         }
     </script>
 </body>
