--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -26,7 +26,7 @@
             <form id="select-firmware">
                 <input type="radio" id="device1" name="device" value="printpoop24" style="margin: 20px" onclick="setManifest('printpoop24')" checked />
                 <label for="device1">PrintpooP 2.4"</label><br>
-                <input type="radio" id="device1" name="device" value="printpoop28" style="margin: 20px" onclick="setManifest('printpoop28')" checked />
+                <input type="radio" id="device1" name="device" value="printpoop28" style="margin: 20px" onclick="setManifest('printpoop28')"/>
                 <label for="device1">PrintpooP 2.8"</label><br>
             </form>
             <hr>
