--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -25,9 +25,9 @@
             <legend>Select firmware</legend>
             <form id="select-firmware">
                 <input type="radio" id="device1" name="device" value="printpoop24" style="margin: 20px" onclick="setManifest('printpoop24')" checked />
-                <label for="device1">PrintpooP 2.4"</label><br>
+                <label for="printpoop24">PrintpooP 2.4"</label><br>
                 <input type="radio" id="device2" name="device" value="printpoop28" style="margin: 20px" onclick="setManifest('printpoop28')"/>
-                <label for="device2">PrintpooP 2.8"</label><br>
+                <label for="printpoop28">PrintpooP 2.8"</label><br>
             </form>
             <hr>
             <esp-web-install-button manifest="../../firmware/printpoop/printpoop24_manifest.json" id="init-button">
