--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <h2 id="firmware-title"></h2>
     <div>
         1. Google Chrome only<br>
         2. Plug USB to the ESP32 2.4" or 2.8" TFT<br>
@@ -31,7 +32,7 @@
             </form>
             <hr>
             <esp-web-install-button manifest="../../firmware/printpoop/printpoop24_manifest.json" id="init-button">
-                <button slot="activate" style="margin-top: 30px;background-color: green">Flash</button><br>
+                <button slot="activate" style="margin-top: 30px;">Flash</button><br>
                 <span slot="unsupported">Your browser doesn't support!</span><br>
                 <span slot="not-allowed">Not support HTTP!</span>
             </esp-web-install-button>
@@ -60,6 +61,20 @@
         window.onload = function () {
             terminalOut('Select firmware -> PrintpooP CYD 2.4"');
         }
+
+        async function readManifest(device) {
+    try {
+        const response = await fetch(`${url}${device}_manifest.json`);
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        const manifestData = await response.json();
+        // Update the h2 heading
+        document.querySelector('h2').textContent = `${manifestData.name} - ${manifestData.version}`;
+    } catch (error) {
+        terminalOut(`Error reading manifest: ${error.message}`);
+    }
+}
     </script>
 </body>
 
