--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h2 id="firmware-title"></h2>
+  <h2 id="firmware-title">PrintpooP</h2>
     <div>
         1. Google Chrome only<br>
         2. Plug USB to the ESP32 2.4" or 2.8" TFT<br>
