--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -60,6 +60,7 @@
 
         window.onload = function () {
             terminalOut('Select firmware -> PrintpooP CYD 2.4"');
+             readManifest('printpoop24');
         }
 
         async function readManifest(device) {
