--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -59,7 +59,7 @@
         }
 
         window.onload = function () {
-            terminalOut('Select firmware -> PrintpooP CYD 2.4"');
+           terminalOut('Select firmware ->printpoop24');
              readManifest('printpoop24');
         }
 
