--- a/src/pages/obd2-gauge.html
+++ b/src/pages/obd2-gauge.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+     <h2>Va&Cob OBD2 Gauge</h2>
     <div>
         1. Connect OBD2 to the vehicle<br>
         2. Plug USB to the ESP32 2.8" TFT<br>
