--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -15,7 +15,7 @@
 <body>
   <h2 id="firmware-title">PrintpooP</h2>
     <div>
-        1. Google Chrome only<br>
+        1. Google Chrome or Microsoft Edge<br>
         2. Plug USB to the ESP32 2.4" or 2.8" TFT<br>
         3. Select the model<br>
         4. Click Flash to install firmware<br>
