--- a/src/pages/obd2-gauge.html
+++ b/src/pages/obd2-gauge.html
@@ -15,9 +15,12 @@
 <body>
      <h2>Va&Cob OBD2 Gauge</h2>
     <div>
-        1. Connect OBD2 to the vehicle<br>
+        1. Google Chrome or Microsoft Edge<br>
         2. Plug USB to the ESP32 2.8" TFT<br>
-        3. Use the gauge to monitor performance<br>
+        3. Select the model
+        4. Click Flash to install firmware
+        5. Check "Erase device" for a new firmware install
+            Uncheck for only update a new firmware version
     </div><br>
     <div id="main">
         <fieldset>
