--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -19,7 +19,8 @@
         2. Plug USB to the ESP32 2.4" or 2.8" TFT<br>
         3. Select the model<br>
         4. Click Flash to install firmware<br>
-        5. Check "Erase device" for a new firmware install<br>Uncheck for only update a new firmware version<br>
+        5. Check "Erase device" for a new firmware install<br>
+            Uncheck for only updating a new firmware version<br>
     </div><br>
     <div id="main">
         <fieldset>
