--- a/src/pages/obd2-gauge.html
+++ b/src/pages/obd2-gauge.html
@@ -17,10 +17,10 @@
     <div>
         1. Google Chrome or Microsoft Edge<br>
         2. Plug USB to the ESP32 2.8" TFT<br>
-        3. Select the model
-        4. Click Flash to install firmware
-        5. Check "Erase device" for a new firmware install
-            Uncheck for only update a new firmware version
+        3. Select the model<br>
+        4. Click Flash to install firmware<br>
+        5. Check "Erase device" for a new firmware install<br>
+           Uncheck for only updating a new firmware version<br>
     </div><br>
     <div id="main">
         <fieldset>
