--- a/src/pages/other-device.html
+++ b/src/pages/other-device.html
@@ -12,7 +12,7 @@
     <div>
         <h1>Other Device Flashing</h1>
         <div>
-            1. Connect your device<br>
+            1. Google Chrome or Microsoft Edge<br>
             2. Select the firmware<br>
             3. Click Flash to install firmware<br>
         </div><br>
