--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
             <button class="tab-button active" data-tab="obd2">Va&Cob OBD2 Gauge</button>
             <button class="tab-button" data-tab="printpoop">PrintpooP</button>
             <button class="tab-button" data-tab="other">Other project</button>
+            <button class="tab-button" onclick="window.open('https://vibetime.pages.dev', '_blank')">🎵 Vibetime</button>
         </div>
         
 <div class="tab-content">
