--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -56,7 +56,15 @@
             style="margin: 20px"
             onclick="setManifest('printpoop28_2')"
           />
-          <label for="printpoop28_2">PrintpooP 2.8" Variant 2 Randomnerd</label><br />
+          <label for="printpoop28_2"
+            >PrintpooP 2.8" Variant 2
+            <a
+              href="https://randomnerdtutorials.com/esp32-cheap-yellow-display-cyd-pinout-esp32-2432s028r/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Randomnerd</a
+            ></label
+          ><br />
         </form>
         <hr />
         <esp-web-install-button
