--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -100,6 +100,7 @@
           .getElementById("init-button")
           .setAttribute("manifest", `${url}${device}_manifest.json`);
         terminalOut("Select firmware -> " + device);
+        readManifest(device);
       }
 
       window.onload = function () {
