--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Va&Cob Web Flasher</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="referrer" content="no-referrer" />
+    <link rel="icon" href="fail.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/tabs.css">
 </head>
