--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PrintpooP Web Flasher</title>
+    <title>PrintpooP</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="referrer" content="no-referrer" />
     <meta
@@ -16,6 +16,8 @@
 
   <body>
     <h2 id="firmware-title">PrintpooP</h2>
+    <a href="https://github.com/VaAndCob/PrintpooP">Link to the project</a>
+    <br><br>
     <div>
       1. Google Chrome or Microsoft Edge<br />
       2. Plug USB to the ESP32 2.4" or 2.8" TFT<br />
