--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,16 @@
 <body>
     <div class="tab-container">
         <div class="tabs">
-            <button class="tab-button active" data-tab="obd2">Va&Cob OBD2 Gauge</button>
+            <button class="tab-button active" data-tab="obd2">ESP32 Bluetooth OBD2 Gauge</button>
             <button class="tab-button" data-tab="printpoop">PrintpooP</button>
-            <button class="tab-button" data-tab="other">Other project</button>
+            <button class="tab-button" data-tab="other">OBD2 Gauge Catalyst</button>
             <button class="tab-button" onclick="window.open('https://vibetime.pages.dev', '_blank')">🎵 Vibetime</button>
         </div>
         
 <div class="tab-content">
     <iframe 
         id="content-frame" 
-        src="./pages/obd2-gauge.html" 
+        src="./pages/esp32-bluetooth-obd2-gauge.html" 
         frameborder="0" 
         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
         onerror="console.error('Failed to load page')"
