--- a/src/pages/OBD2-Gauge-Catalyst.html
+++ b/src/pages/OBD2-Gauge-Catalyst.html
@@ -9,7 +9,7 @@
 
   <body>
     <div>
-      <h1>OBD2 Gauge Catalyst</h1>
+      <h1>OBD2 Gauge Catalyst (under development)</h1>
       <div>
         1. Google Chrome or Microsoft Edge<br />
         2. Select the firmware<br />
@@ -51,7 +51,7 @@
         </fieldset>
       </div>
     </div>
-
+<!--
     <script
       type="module"
       src="https://vaandcob.github.io/webpage/webserial/install-button.js?module"
@@ -75,5 +75,6 @@
         terminalOut("Select firmware -> Other Device");
       }
     </script>
+    -->
   </body>
 </html>
