--- a/src/pages/esp32-bluetooth-obd2-gauge.html
+++ b/src/pages/esp32-bluetooth-obd2-gauge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Va&Cob OBD2 Gauge</title>
+    <title>ESP32 Bluetooth OBD2 Gauge</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="referrer" content="no-referrer" />
     <meta
@@ -15,7 +15,9 @@
   </head>
 
   <body>
-    <h2 id="firmware-title">Va&Cob OBD2 Gauge</h2>
+    <h2 id="firmware-title">ESP32 Bluetooth OBD2 Gauge</h2>
+    <a href="https://github.com/VaAndCob/ESP32-Blutooth-OBD2-Gauge">Link to the project</a>
+    <br><br>
     <div>
       1. Google Chrome or Microsoft Edge<br />
       2. Plug USB to the ESP32 2.8" TFT<br />
