--- a/src/pages/esp32-bluetooth-obd2-gauge.html
+++ b/src/pages/esp32-bluetooth-obd2-gauge.html
@@ -88,7 +88,7 @@
 
       window.onload = function () {
         terminalOut("Select device -> T5");
-        readManifest("T5");
+       // readManifest("T5");
       }
 
       async function readManifest(device) {
