--- a/src/pages/esp32-bluetooth-obd2-gauge.html
+++ b/src/pages/esp32-bluetooth-obd2-gauge.html
@@ -16,7 +16,7 @@
 
   <body>
     <h2 id="firmware-title">ESP32 Bluetooth OBD2 Gauge</h2>
-    <a href="https://github.com/VaAndCob/ESP32-Blutooth-OBD2-Gauge">Link to the project</a>
+    <a href="https://github.com/VaAndCob/ESP32-Blutooth-OBD2-Gauge" target="_blank" rel="noopener noreferrer">Link to the project</a>
     <br><br>
     <div>
       1. Google Chrome or Microsoft Edge<br />
