--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -16,7 +16,7 @@
 
   <body>
     <h2 id="firmware-title">PrintpooP</h2>
-    <a href="https://github.com/VaAndCob/PrintpooP">Link to the project</a>
+    <a href="https://github.com/VaAndCob/PrintpooP" target="_blank" rel="noopener noreferrer">Link to the project</a>
     <br><br>
     <div>
       1. Google Chrome or Microsoft Edge<br />
