--- a/src/pages/OBD2-Gauge-Catalyst.html
+++ b/src/pages/OBD2-Gauge-Catalyst.html
@@ -12,8 +12,11 @@
       <h1>OBD2 Gauge Catalyst (under development)</h1>
       <div>
         1. Google Chrome or Microsoft Edge<br />
-        2. Select the firmware<br />
-        3. Click Flash to install firmware<br />
+        2. Plug USB to the ESP32 CYD 2.8" TFT<br />
+        3. Select the model<br />
+        4. Click Flash to install firmware<br />
+        5. Check "Erase device" for a new firmware install<br />
+        Uncheck for only updating a new firmware version<br />
       </div>
       <br />
       <div id="main">
@@ -51,7 +54,7 @@
         </fieldset>
       </div>
     </div>
-<!--
+    <!--
     <script
       type="module"
       src="https://vaandcob.github.io/webpage/webserial/install-button.js?module"
