--- a/src/pages/OBD2-Gauge-Catalyst.html
+++ b/src/pages/OBD2-Gauge-Catalyst.html
@@ -10,6 +10,9 @@
   <body>
     <div>
       <h1>OBD2 Gauge Catalyst (under development)</h1>
+  
+       <a href="https://youtube.com/shorts/zx2siWw9A-U?si=RCQxRB1wuyyViUxC"  target="_blank" rel="noopener noreferrer">Youtube</a>
+       <br><br>
       <div>
         1. Google Chrome or Microsoft Edge<br />
         2. Plug USB to the ESP32 CYD 2.8" TFT<br />
